fixing the px so there is no extra space westing in the side

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 .card {
-    width: 250px;
+    width: 350px;
     border: 1px solid #ddd;
     border-radius: 10px;
     overflow: hidden;
